page1.html create

--- a/a-unit-notice.html
+++ b/a-unit-notice.html
@@ -7,6 +7,7 @@
     <title>GST admission NSTU</title>
     <link rel="shortcut icon" href="/image/nstu-logo.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -19,7 +20,7 @@
     </header>
     <main class="container">
         <div class="py-3">
-            <a class="btn btn-sm btn-info px-2 mb-2" href="index.html">হোম</a>
+            <a class="btn btn-sm btn-info px-2 mb-2" href="index.html"><i class="fas fa-home"> </i> হোম</a>
             <a class="btn btn-sm btn-info px-2 mb-2" href="a-unit-notice.html">A ইউনিট নোটিশ</a>
             <a class="btn btn-sm btn-info px-2 mb-2" href="#">B ইউনিট নোটিশ</a>
             <a class="btn btn-sm btn-info px-2 mb-2" href="#">C ইউনিট নোটিশ</a>
