create choice and form page

--- a/a-unit-notice.html
+++ b/a-unit-notice.html
@@ -14,7 +14,7 @@
 <body>
     <header class="border-bottom shadow-sm">
        <div class="container d-flex align-items-center">
-        <img src="/image/nstu-logo.jpg" alt="NSTU Logo" height="100px">
+        <a href="index.html"><img src="/image/nstu-logo.jpg" alt="NSTU Logo" height="100px"></a>
         <h4>Noakhali Science and Technology University</h4>
        </div>
     </header>
