--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>GST admission NSTU</title>
     <link rel="shortcut icon" href="/image/nstu-logo.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.maateen.me/adorsho-lipi/font.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -14,40 +15,42 @@
 <body>
     <header class="border-bottom shadow-sm">
        <div class="container d-flex align-items-center">
-        <img src="/image/nstu-logo.jpg" alt="NSTU Logo" height="100px">
+        <a href="index.html"><img src="/image/nstu-logo.jpg" alt="NSTU Logo" height="100px"></a>
         <h4>Noakhali Science and Technology University</h4>
        </div>
     </header>
-    <main class="container">
-        <div class="mt-3 border p-4">
-            সমন্বিত ভর্তি পরীক্ষায় ব্যবহৃত Applicant ID এবং Passowrd দিয়ে প্রবেশ করুন
-            <hr>
-            <div class="alert alert-primary">
-                Applicant ID / Password সঠিকভাবে প্রদান করতে হবে।
-            </div>
-            <div class="card bg-light">
-                <div class="card-body w-50 mx-auto py-5">
-                    <form action="post">
-                        <div class="row">
-                            <p class="input-label col-4 text-right">Applicant ID</p>
-                            <input type="text" class="form-control col" placeholder="Applicant ID">
-                        </div>
-                        <div class="row">
-                            <p class="input-label col-4 text-right">Password</p>
-                            <input type="password" class="form-control col" placeholder="Password">
-                        </div>
-                        <div class="row justify-content-end mt-3">
-                            <div><a href="index.html" class="btn btn-danger mr-3"><i class="fas fa-arrow-left"></i> Back</a></div>
-                            <div><a href="page1.html" class="btn btn-success"><i class="fas fa-sign-in-alt"></i> Submit</a></div>
-                        </div>
-                    </form>
+    <div class="bg-light pt-4">
+        <main class="container">
+            <div class="pt-3 border p-4 bg-white">
+                সমন্বিত ভর্তি পরীক্ষায় ব্যবহৃত Applicant ID এবং Passowrd দিয়ে প্রবেশ করুন
+                <hr>
+                <div class="alert alert-primary">
+                    Applicant ID / Password সঠিকভাবে প্রদান করতে হবে।
+                </div>
+                <div class="card bg-light">
+                    <div class="card-body w-50 mx-auto py-5">
+                        <form action="post">
+                            <div class="row">
+                                <p class="input-label col-4 text-right">Applicant ID</p>
+                                <input type="text" class="form-control col" placeholder="Applicant ID">
+                            </div>
+                            <div class="row">
+                                <p class="input-label col-4 text-right">Password</p>
+                                <input type="password" class="form-control col" placeholder="Password">
+                            </div>
+                            <div class="row justify-content-end mt-3">
+                                <div><a href="index.html" class="btn btn-danger mr-3"><i class="fas fa-arrow-left"></i> Back</a></div>
+                                <div><a href="page1.html" class="btn btn-success"><i class="fas fa-sign-in-alt"></i> Submit</a></div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-        
-    </main>
+            
+        </main>
+    </div>
     <footer class="border-top">
-        <div class="container bg-light py-3 border-top">
+        <div class="container py-3 border-top">
             Copyright © 2021 | Noakhali Science and Technology University | All Rights Reserved
         </div>
     </footer>
