create choice and form page

--- a/a-unit-notice.html
+++ b/a-unit-notice.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GST admission NSTU</title>
-    <link rel="shortcut icon" href="/image/nstu-logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="image/nstu-logo.jpg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="border-bottom shadow-sm">
        <div class="container d-flex align-items-center">
-        <a href="index.html"><img src="/image/nstu-logo.jpg" alt="NSTU Logo" height="100px"></a>
+        <a href="index.html"><img src="image/nstu-logo.jpg" alt="NSTU Logo" height="100px"></a>
         <h4>Noakhali Science and Technology University</h4>
        </div>
     </header>
