--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header style="display: flex; margin: 1rem 0 0.5rem 0; padding-left: 2rem;">
-        <img src="/image/nstu-logo.jpg" height="50px" alt="Logo">
+        <img src="image/nstu-logo.jpg" height="50px" alt="Logo">
         <div style="text-align: center; flex: 1;">
             <p style="font-size: 1.4rem;">নোয়াখালী বিজ্ঞান ও প্রযুক্তি বিশ্ববিদ্যালয়</p>
             <p style="font-size: 0.8rem;">১ম বর্ষ স্নাতক/স্নাতক (সম্মান), শিক্ষাবর্ষ ২০২০-২০২১</p>
