--- a/a-unit-notice.html
+++ b/a-unit-notice.html
@@ -26,7 +26,7 @@
             <a class="btn btn-sm btn-info px-2 mb-2" href="#">C ইউনিট নোটিশ</a>
             <a class="btn btn-sm btn-info px-2 mb-2" href="#">D ইউনিট নোটিশ</a>
         </div>
-        <iframe id="iframepdf" width="100%" height="800px" src="/image/gst_prospectus.pdf"></iframe>
+        <iframe id="iframepdf" width="100%" height="800px" src="image/gst_prospectus.pdf"></iframe>
     </main>
     <footer class="border-top">
         <div class="container bg-light py-3 border-top">
