--- a/page1.html
+++ b/page1.html
@@ -21,8 +21,8 @@
     </header>
     <div class="bg-light">
         <main class="container">
-            <div class="border-left border-right p-5 bg-white">
-                <table class="table table-bordered table-sm w-75 mx-auto">
+            <div class="border-left border-right py-5 bg-white">
+                <table class="table table-bordered table-sm w-md-75 mx-auto">
                     <tr class="bg-light">
                         <th width="30%" colspan="2">Applicant's  Name</th>
                         <td colspan="5">MD. SAYDUZZAMAN</td>
@@ -69,8 +69,8 @@
                         <td >PASS</td>
                     </tr>
                 </table>
-    
-                <table class="table table-sm w-75 mx-auto table-striped table-bordered">
+                <br>
+                <table class="table table-sm w-md-75 mx-auto table-striped table-bordered">
                     <tr>
                         <th class="text-right"  width="40%">UNIT</th>
                         <td>A</td>
