--- a/choice_form.html
+++ b/choice_form.html
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                         <div class="row justify-content-center pt-4">
-                           <div class="col-6 text-right">
+                           <div class="col-sm-6 text-right">
                             <a href="index.html" class="btn btn-light mr-2 border">ফিরে চলুন</a>
                             <input type="submit" class="btn btn-info" value="সাবমিট">
                            </div>
