--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                     Applicant ID / Password সঠিকভাবে প্রদান করতে হবে।
                 </div>
                 <div class="card bg-light">
-                    <div class="card-body w-50 mx-auto py-5">
+                    <div class="card-body mx-auto py-5">
                         <form action="post">
                             <div class="row">
                                 <p class="input-label col-4 text-right">Applicant ID</p>
