--- a/form.html
+++ b/form.html
@@ -139,12 +139,12 @@
             <p style="border-bottom: 1px dotted #000000; width: 400px;"></p>
             <p>ইনস্টিটিউট/বিভাগ এ ভর্তির সুপারিশ করা হল।</p>
         </div>
-        <div>
+        <div style="margin-top: 3rem;">
             <p>৯। স্বাক্ষর ও তারিখ</p>
             <p>পরিচালক/বিভাগীয় চেয়ারম্যান</p>
         </div>
     </main>
 
-    <div style="height: 100px;"></div>
+    <div style="height: 200px;"></div>
 </body>
 </html>
