--- a/page1.html
+++ b/page1.html
@@ -120,13 +120,13 @@
                 <div class="pt-4"><h4><i class="fas fa-table"></i> আবেদন যোগ্য ইউনিট সমূহ</h4></div>
                 <table class="table table-striped table-bordered">
                     <tr class="bg-info text-light">
-                        <th>ইউনিট</th>
+                        <th>গ্রুপ</th>
                         <th>বিভাগসমূহ</th>
                         <th>আবেদন</th>
                         <th class="input-label">বিষয় পছন্দকরণ</th>
                     </tr>
                     <tr>
-                        <td class="input-label">ইউনিট - A</td>
+                        <td class="input-label">গ্রুপ - A</td>
                         <td>
                             কম্পিউটার সায়েন্স এন্ড টেলিকমিউনিকেশন ইঞ্জিনিয়ারিং, এপ্লায়েড কেমিস্ট্রি এন্ড
                             কেমিক্যাল ইঞ্জিনিয়ারিং, ইনফরমেশন এন্ড কমিউনিকেশন ইঞ্জিনিয়ারিং, ইলেকট্রিক্যাল এন্ড
@@ -137,7 +137,7 @@
                         <td><a href="choice_form.html">Click here</a></td>
                     </tr>
                     <tr>
-                        <td class="input-label">ইউনিট - B</td>
+                        <td class="input-label">গ্রুপ - B</td>
                         <td>
                             ফার্মেসি, মাইক্রোবায়োলজি, বায়োটেকনোলজি এন্ড জেনেটিক ইঞ্জিনিয়ারিং, বায়োকেমিস্ট্রি এন্ড মলিকুলার বায়োলজি বিভাগ
                         </td>
