--- a/page1.html
+++ b/page1.html
@@ -20,8 +20,8 @@
        </div>
     </header>
     <div class="bg-light">
-        <main class="container">
-            <div class="border-left border-right py-5 bg-white">
+        <main class="container px-0">
+            <div class="border-left border-right py-5 bg-white px-3">
                 <table class="table table-bordered table-sm w-md-75 mx-auto">
                     <tr class="bg-light">
                         <th width="30%" colspan="2">Applicant's  Name</th>
