--- a/choice_form.html
+++ b/choice_form.html
@@ -20,8 +20,8 @@
        </div>
     </header>
     <div class="bg-light">
-        <main class="container">
-            <div class="border-left border-right p-5 bg-white">
+        <main class="container px-0">
+            <div class="border-left border-right p-5 bg-white px-3">
                 <div class="alert alert-primary text-center">
                     <b>A গ্রুপ সাবজেক্ট চয়েজ</b>
                 </div>
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                         <div class="row justify-content-center pt-4">
-                           <div class="col-sm-6 text-right">
+                           <div class="col-9 col-sm-6 text-right">
                             <a href="index.html" class="btn btn-light mr-2 border">ফিরে চলুন</a>
                             <input type="submit" class="btn btn-info" value="সাবমিট">
                            </div>
