--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </main>
     </div>
     <footer class="border-top">
-        <div class="container py-3 border-top">
+        <div class="container py-3">
             Copyright © 2021 | Noakhali Science and Technology University | All Rights Reserved
         </div>
     </footer>
