--- a/a-unit-notice.html
+++ b/a-unit-notice.html
@@ -29,7 +29,7 @@
         <iframe id="iframepdf" width="100%" height="800px" src="image/gst_prospectus.pdf"></iframe>
     </main>
     <footer class="border-top">
-        <div class="container bg-light py-3 border-top">
+        <div class="container bg-light py-3">
             Copyright © 2021 | Noakhali Science and Technology University | All Rights Reserved
         </div>
     </footer>
