--- a/choice_form.html
+++ b/choice_form.html
@@ -21,7 +21,7 @@
     </header>
     <div class="bg-light">
         <main class="container px-0">
-            <div class="border-left border-right p-5 bg-white px-3">
+            <div class="border-left border-right py-5 px-sm-3 px-md-5 bg-white px-3">
                 <div class="alert alert-primary text-center">
                     <b>A গ্রুপ সাবজেক্ট চয়েজ</b>
                 </div>
@@ -29,11 +29,11 @@
                     <form action="form.html">
                         <div class="row mb-2">
                             <div class="col-5 text-right text-justify">Applicant's Name (English):</div>
-                            <div class="col-6 text-capitalize">MD. SAYDUZZAMAN </div>
+                            <div class="col text-capitalize">MD. SAYDUZZAMAN </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">প্রার্থীর নাম (বাংলায়):</div>
-                            <div class="col-6 col-lg-4"><input type="text" class="form-control form-control-sm"></div>
+                            <div class="col col-sm-6 col-lg-4"><input type="text" class="form-control form-control-sm"></div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right text-justify">Fathers's Name (English):</div>
@@ -42,7 +42,7 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">পিতার নাম (বাংলায়):</div>
-                            <div class="col-6 col-lg-4"><input type="text" class="form-control form-control-sm"></div>
+                            <div class="col col-sm-6 col-lg-4"><input type="text" class="form-control form-control-sm"></div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right text-justify">Mothers's Name (English):</div>
@@ -51,11 +51,11 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">মাতার নাম (বাংলায়):</div>
-                            <div class="col-6 col-lg-4"><input type="text" class="form-control form-control-sm"></div>
+                            <div class="col col-sm-6 col-lg-4"><input type="text" class="form-control form-control-sm"></div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">চয়েজ নং ১:</div>
-                            <div class="col-6 col-lg-4">
+                            <div class="col col-sm-6 col-lg-4">
                                 <select class="form-control">
                                     <option selected value="1">কম্পিউটার সায়েন্স এন্ড টেলিকমিউনিকেশন ইঞ্জিনিয়ারিং</option>
                                     <option value="2">এপ্লায়েড কেমিস্ট্রি এন্ড কেমিক্যাল ইঞ্জিনিয়ারিং</option>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">চয়েজ নং ২:</div>
-                            <div class="col-6 col-lg-4">
+                            <div class="col col-sm-6 col-lg-4">
                                 <select class="form-control">
                                     <option value="1">কম্পিউটার সায়েন্স এন্ড টেলিকমিউনিকেশন ইঞ্জিনিয়ারিং</option>
                                     <option selected value="2">এপ্লায়েড কেমিস্ট্রি এন্ড কেমিক্যাল ইঞ্জিনিয়ারিং</option>
@@ -83,7 +83,7 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">চয়েজ নং ৩:</div>
-                            <div class="col-6 col-lg-4">
+                            <div class="col col-sm-6 col-lg-4">
                                 <select class="form-control">
                                     <option value="1">কম্পিউটার সায়েন্স এন্ড টেলিকমিউনিকেশন ইঞ্জিনিয়ারিং</option>
                                     <option value="2">এপ্লায়েড কেমিস্ট্রি এন্ড কেমিক্যাল ইঞ্জিনিয়ারিং</option>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">চয়েজ নং ৪:</div>
-                            <div class="col-6 col-lg-4">
+                            <div class="col col-sm-6 col-lg-4">
                                 <select class="form-control">
                                     <option value="1">কম্পিউটার সায়েন্স এন্ড টেলিকমিউনিকেশন ইঞ্জিনিয়ারিং</option>
                                     <option value="2">এপ্লায়েড কেমিস্ট্রি এন্ড কেমিক্যাল ইঞ্জিনিয়ারিং</option>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">চয়েজ নং ৫:</div>
-                            <div class="col-6 col-lg-4">
+                            <div class="col col-sm-6 col-lg-4">
                                 <select class="form-control">
                                     <option value="1">কম্পিউটার সায়েন্স এন্ড টেলিকমিউনিকেশন ইঞ্জিনিয়ারিং</option>
                                     <option value="2">এপ্লায়েড কেমিস্ট্রি এন্ড কেমিক্যাল ইঞ্জিনিয়ারিং</option>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">চয়েজ নং ৬:</div>
-                            <div class="col-6 col-lg-4">
+                            <div class="col col-sm-6 col-lg-4">
                                 <select class="form-control">
                                     <option value="1">কম্পিউটার সায়েন্স এন্ড টেলিকমিউনিকেশন ইঞ্জিনিয়ারিং</option>
                                     <option value="2">এপ্লায়েড কেমিস্ট্রি এন্ড কেমিক্যাল ইঞ্জিনিয়ারিং</option>
@@ -139,7 +139,7 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">চয়েজ নং ৭:</div>
-                            <div class="col-6 col-lg-4">
+                            <div class="col col-sm-6 col-lg-4">
                                 <select class="form-control">
                                     <option value="1">কম্পিউটার সায়েন্স এন্ড টেলিকমিউনিকেশন ইঞ্জিনিয়ারিং</option>
                                     <option value="2">এপ্লায়েড কেমিস্ট্রি এন্ড কেমিক্যাল ইঞ্জিনিয়ারিং</option>
@@ -153,7 +153,7 @@
                         </div>
                         <div class="row mb-2">
                             <div class="col-5 text-right">কোটা:</div>
-                            <div class="col-6 col-lg-4">
+                            <div class="col col-sm-6 col-lg-4">
                                 <select class="form-control">
                                     <option selected value="1">নাই</option>
                                     <option value="2">মুক্তিযোদ্ধা কোটা</option>
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                         <div class="row justify-content-center pt-4">
-                           <div class="col-9 col-sm-6 text-right">
+                           <div class="col-10 col-lg-6 text-right">
                             <a href="index.html" class="btn btn-light mr-2 border">ফিরে চলুন</a>
                             <input type="submit" class="btn btn-info" value="সাবমিট">
                            </div>
