--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="border-bottom shadow">
+    <header class="border-bottom shadow py-2">
        <div class="container d-flex align-items-center">
         <a href="index.html"><img src="image/nstu-logo.jpg" alt="NSTU Logo" height="100px"></a>
-        <h4>Noakhali Science and Technology University</h4>
+        <div class="text-center">
+            <p class="font-lg m-0">নোয়াখালী বিজ্ঞান ও প্রযুক্তি বিশ্ববিদ্যালয়</p>
+            <p class="font-md m-0">Noakhali Science and Technology University</p>
+            <small class="text-center">নোয়াখালী ৩৮১৪, বাংলাদেশ</small>
+        </div>
        </div>
     </header>
     <div class="bg-light">
